# qml-remoteserver

./: CMakeLists.txt  LICENSE.md  QmlPropertyObserver.hpp  README.md  datadecoder.hpp  genericqmlbridge.cpp  genericqmlbridge.h  main.cpp  slipprocessor.cpp  slipprocessor.h
.github/workflows/: build.yml
ci/deploy/linux/: build-appimage.sh  download-tools.sh  qml-remoteserver.desktop
docs/: PROTOCOL.md  architecture.drawio
examples/: dashboard.qml  slip_processor.py  test_dashboard.py
